# api/qsystem.py
@@ -290,6 +290,7 @@ import app.resources.theq.websocket
 import app.resources.theq.user.user
 import app.resources.theq.user.user_appointments
 
+import app.resources.bookings.appointment.all_recurring_stat_delete
 import app.resources.bookings.appointment.appointment_availability
 import app.resources.bookings.appointment.appointment_detail
 import app.resources.bookings.appointment.appointment_list
@@ -325,6 +326,7 @@ import app.resources.bookings.invigilator.invigilator_list
 import app.resources.bookings.invigilator.invigilator_list_offsite
 import app.resources.bookings.invigilator.invigilator_put
 import app.resources.bookings.room.room_list
+import app.resources.bookings.room.room_office_list
 import app.resources.bookings.exam_type.exam_type_list
 import app.resources.bookings.appointment.appointment_reminder_get
 
